force-app/main/default/objects/FlexiChk__Checklist_Section__c/FlexiChk__Checklist_Section__c.object-meta.xml
<CustomObject>
    <label>Checklist Section</label>
    <nameField>
        <displayFormat>SECT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Sections</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>