force-app/main/default/objects/FlexiChk__Checklist_Section__c/fields/FlexiChk__Checklist__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist</label>
    <referenceTo>FlexiChk__Checklist__c</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>