force-app/main/default/objects/FlexiChk__Checklist_Section__c/fields/FlexiChk__Checklist_Section_Template__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Checklist_Section_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Section Template</label>
    <referenceTo>FlexiChk__Checklist_Section_Template__c</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>